--- a/web/style.css
+++ b/web/style.css
@@ -1,10 +1,16 @@
 body {
-	padding: 0 16px 0 16px;
+	padding: 64px 16px 0px 16px;
+	font-family: system-ui, -apple-system, blinkmacsystemfont, "Segoe UI", helvetica, arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-#editor {
+.editor {
 	border: 1px solid #bbb;
-	margin: 0 16px 0 16px;
+	margin: 0 16px 32px 16px;
+	max-width: 650px;
+}
+
+.editor.read-only {
+	background-color: #f4f4f4;
 }
 
 .plot {
