--- a/web/style.css
+++ b/web/style.css
@@ -55,3 +55,41 @@ body {
 .ace_keyword {
 	color: black !important;
 }
+
+.correlation {
+	margin-bottom: 30px;
+	border-collapse: collapse;
+	border-right: 1px solid black;
+	border-bottom: 1px solid black;
+}
+
+.correlation td {
+	padding: 2px 6px 2px 6px;
+}
+
+.correlation tr:first-child {
+	text-align: center;
+}
+
+.correlation tr:first-child td:first-child {
+	border-right: 1px solid black;
+	border-bottom: 1px solid black;
+}
+
+.correlation tr:first-child td:nth-child(n + 2), .correlation tr:nth-child(n + 2) td:first-child {
+	background-color: #f0f0f0;
+}
+
+.correlation tr:first-child td:nth-child(n + 2) {
+	border-top: 1px solid black;
+}
+
+.correlation tr:nth-child(n + 2) td:first-child {
+	border-left: 1px solid black;
+}
+
+.correlation tr:nth-child(n + 2) td:nth-child(n + 2) {
+	/* color: white; */
+	text-align: right;
+	border: 1px solid black;
+}
