--- a/web/style.css
+++ b/web/style.css
@@ -7,10 +7,10 @@ body {
 	border: 1px solid #bbb;
 	margin: 0 16px 32px 16px;
 	max-width: 650px;
-}
 
-.editor.read-only {
-	background-color: #f8f8f8;
+	.read-only {
+		background-color: #f8f8f8;
+	}
 }
 
 .plot {
@@ -19,25 +19,25 @@ body {
 	height: 500px;
 	padding: 0 16px 16px 0;
 	margin-bottom: 16px;
-}
 
-.plot button {
-	position: relative;
-	bottom: 26px;
-	right: 0;
-	transition: background 0.25s, border-color 0.25s;
-	background: rgba(40, 44, 52, 0.05);
-	border: 1px solid transparent;
-	border-radius: 6px;
-	color: #3080d0;
-	text-decoration: none !important;
-	font-size: 0.8rem;
-	padding: 6px 12px;
-	cursor: pointer;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+	button {
+		position: relative;
+		bottom: 26px;
+		right: 0;
+		transition: background 0.25s, border-color 0.25s;
+		background: rgba(40, 44, 52, 0.05);
+		border: 1px solid transparent;
+		border-radius: 6px;
+		color: #3080d0;
+		text-decoration: none !important;
+		font-size: 0.8rem;
+		padding: 6px 12px;
+		cursor: pointer;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+	}
 }
 
 .ace_command {
@@ -57,39 +57,56 @@ body {
 }
 
 .correlation {
+	display: inline-block;
 	margin-bottom: 30px;
-	border-collapse: collapse;
-	border-right: 1px solid black;
-	border-bottom: 1px solid black;
-}
 
-.correlation td {
-	padding: 2px 6px 2px 6px;
-}
+	table {
+		border-collapse: collapse;
+		border-right: 1px solid black;
+		border-bottom: 1px solid black;
+	}
 
-.correlation tr:first-child {
-	text-align: center;
-}
+	td {
+		padding: 2px 6px 2px 6px;
+	}
 
-.correlation tr:first-child td:first-child {
-	border-right: 1px solid black;
-	border-bottom: 1px solid black;
-}
+	tr:first-child {
+		text-align: center;
+	}
 
-.correlation tr:first-child td:nth-child(n + 2), .correlation tr:nth-child(n + 2) td:first-child {
-	background-color: #f0f0f0;
-}
+	tr:first-child td:first-child {
+		border-right: 1px solid black;
+		border-bottom: 1px solid black;
+	}
 
-.correlation tr:first-child td:nth-child(n + 2) {
-	border-top: 1px solid black;
-}
+	tr:first-child td:nth-child(n + 2), tr:nth-child(n + 2) td:first-child {
+		background-color: #f0f0f0;
+	}
 
-.correlation tr:nth-child(n + 2) td:first-child {
-	border-left: 1px solid black;
-}
+	tr:first-child td:nth-child(n + 2) {
+		border-top: 1px solid black;
+	}
+	
+	tr:nth-child(n + 2) td:first-child {
+		border-left: 1px solid black;
+	}
+	
+	tr:nth-child(n + 2) td:nth-child(n + 2) {
+		text-align: right;
+		border: 1px solid black;
+	}
+	
+	div:last-child {
+		text-align: right;
+		font-size: 80%;
+		color: #666;
+	}
 
-.correlation tr:nth-child(n + 2) td:nth-child(n + 2) {
-	/* color: white; */
-	text-align: right;
-	border: 1px solid black;
+	.separator-top {
+		border-left: 1px solid black;
+	}
+
+	.separator-left {
+		border-top: 1px solid black;
+	}
 }
