--- a/web/style.css
+++ b/web/style.css
@@ -24,12 +24,12 @@ body {
 	margin-bottom: 1em;
 
 	canvas {
-		margin-bottom: 3em;
+		margin-bottom: 1em;
 	}
 
 	button {
 		position: relative;
-		bottom: 4.3em;
+		bottom: 3.3em;
 		right: 1em;
 		transition: background 0.25s, border-color 0.25s;
 		background: rgba(40, 44, 52, 0.05);
@@ -142,7 +142,7 @@ body {
 
 .results {
 	width: var(--base-width);
-	margin-bottom: 2em;
+	margin-bottom: 2.5em;
 
 	table {
 		border-collapse: collapse;
@@ -191,6 +191,11 @@ body {
 
 		table {
 			width: 100%;
+		}
+
+		td:last-child {
+			overflow-wrap: break-word;
+			white-space: normal;
 		}
 
 		td:first-child {
