--- a/web/style.css
+++ b/web/style.css
@@ -183,9 +183,8 @@ body {
 		}
 	}
 
-	.events {
+	.events, .parameters {
 		width: calc(var(--base-width) - 2px);
-		height: 11.8rem;
 		overflow-y: scroll;
 		border: 1px solid #bbb;
 
@@ -193,13 +192,7 @@ body {
 			width: 100%;
 		}
 
-		td:last-child {
-			overflow-wrap: break-word;
-			white-space: normal;
-		}
-
 		td:first-child {
-			text-align: right;
 			border-left: 0;
 		}
 
@@ -214,6 +207,19 @@ body {
 		tr:last-child td {
 			border-bottom: 0;
 		}
+	}
+
+	.events {
+		height: 11.8rem;
+
+		td:first-child {
+			text-align: right;
+		}
+
+		td:last-child {
+			overflow-wrap: break-word;
+			white-space: normal;
+		}
 
 		.warning {
 			color: #ffd000;
@@ -222,6 +228,26 @@ body {
 		.error {
 			color: #d00;
 		}
+	}
+
+	.parameters {
+		height: 14rem;
+		margin-top: 1.5em;
+
+		td {
+			white-space: nowrap;
+		}
+
+		td:has(span.numeric) {
+			text-align: right;
+		}
+	}
+
+	.statistics {
+		text-align: right;
+		font-size: 0.85em;
+		margin-right: 1.3em;
+		color: #888;
 	}
 }
 
