--- a/web/style.css
+++ b/web/style.css
@@ -157,14 +157,17 @@ body {
 		vertical-align: top;
 	}
 
-	.general td:nth-child(2), .trades td:nth-child(2) {
+	.general td:nth-child(2), .trades td:nth-child(2), .median td:nth-child(2) {
 		text-align: right;
 	}
 
-	.general {
+	.general, .median {
 		display: flex;
 		align-items: flex-start;
 		gap: 1em;
+	}
+
+	.general {
 		margin-bottom: 1em;
 	}
 
@@ -233,6 +236,7 @@ body {
 	.parameters {
 		height: 14rem;
 		margin-top: 1.5em;
+		margin-bottom: 1em;
 
 		td {
 			white-space: nowrap;
@@ -248,6 +252,11 @@ body {
 		font-size: 0.85em;
 		margin-right: 0.6em;
 		color: #888;
+	}
+
+	.medianTitle {
+		text-align: center;
+		margin-bottom: 0.1em;
 	}
 }
 
